[package]
name = "eth2_keystore"
version = "0.1.0"
authors = ["Pawan Dhananjay <pawan@sigmaprime.io", "Paul Hauner <paul@paulhauner.com>"]
edition = { workspace = true }
autotests = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8"
bls = { workspace = true }
cipher = "0.4"
ctr = "0.9"
eth2_key_derivation = { workspace = true }
hex = { workspace = true }
hmac = "0.12.0"
pbkdf2 = { version = "0.12.0", default-features = false }
rand = { workspace = true }
scrypt = { version = "0.11.0", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
sha2 = { workspace = true }
unicode-normalization = "0.1.16"
uuid = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[test]]
name = "eth2_keystore_tests"
path = "tests/main.rs"
